# APresentation

./: .gitignore  Cargo.toml  build.rs  build_config.hjson  example.hjson  justfile  test.hjson
.github/workflows/: rust.yml  rust_debug.yml  rust_release.yml
src/: app.rs  editor_app.rs  main.rs  parse.rs  template.hjson  util.rs  version  viewer_app.rs
src/parse/: json.rs  mod.rs
src/presentation/: mod.rs  renderable.rs  slide.rs  util.rs
src/render/: font.rs  mod.rs  sprite.rs
