[package]
name = "a_presentation"
version = "0.1.0"
edition = "2021"
authors = [
    "S4lm0n3ll3"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default_font = []
debug_features = []

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
lazy_static = "1.4"
anyhow = "1.0"
regex = "1"
once_cell = "1.18"
piston = "0.53.2"
piston_window = "0.129"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"
fontdue = "0.7"
meval = "0.2"
enterpolation = { version = "0.2", default-features = false, features = ["std", "bezier"] }
serde = { version = "1.0", features = ["derive"] }
deser-hjson = "2.1.0"
winit = "0.28.1"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
deser-hjson = "2.1.0"
reqwest = { version = "0.11", features = ["blocking"] }