[package]
name = "a_presentation"
version = "0.1.0"
edition = "2021"
authors = [
    "S4lm0n3ll3"
]

[profile.release]
opt-level = 3
overflow-checks = false

[profile.optimized]
inherits = "release"
debug = true
opt-level = 3
codegen-units = 1
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default_font = []
debug_features = []
heap_profiling = []

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"

winit = "0.28.1"
piston = "0.54.0"
piston_window = "0.130"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.83.0"
fontdue = "0.7"
image = "0.24"

egui = "0.23"

meval = "0.2"
chrono = "0.4"
regex = "1"
mlua = { version = "0.9", features = ["luajit", "vendored"] }

serde = { version = "1.0", features = ["derive"] }
deser-hjson = "2.1.0"
serde_json = "1"

anyhow = "1.0"
lazy_static = "1.4"
once_cell = "1.18"
indexmap = "2.0"

mimalloc = { version = "0.1.17", default-features = false }
# jemallocator = "0.5.4"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
deser-hjson = "2.1.0"
reqwest = { version = "0.11", features = ["blocking"] }